--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -114,7 +114,7 @@ body {
     cursor: pointer;
     text-align: center;
     font-size: 20px;
-    color: rgb(113, 118, 123)
+    color: #71767B;
 }
 
 .upper-buttons>div:hover {
@@ -125,7 +125,7 @@ body {
 
 .active-button {
     color: white;
-    border-bottom: 5px solid rgb(29, 155, 240);
+    border-bottom: 5px solid #1D9BF0;
 }
 
 .login-container {
@@ -160,7 +160,7 @@ body {
     height: 200px;
     width: 410px;
     font-size: 70px;
-    margin-top: -200px;
+    margin-top: -80px;
     font-weight: bold;
 }
 
@@ -180,6 +180,12 @@ body {
     font-size: 18px;
     border-radius: 20px;
     margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.button-google:hover{
+    background-color: #CEC9C9;
+    transition: 0.25s;
 }
 
 .button-apple{
@@ -193,4 +199,89 @@ body {
     border-radius: 20px;
     margin-bottom: 20px;
     font-weight: bold;
+    cursor: pointer;
+}
+
+.button-apple:hover{
+    background-color: #CEC9C9;
+    transition: 0.25s;
+}
+
+.or {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: white;
+    width: 320px;
+    margin-bottom: 15px;
+  }
+  
+  .or::before,
+  .or::after {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background-color: #545758;
+    margin: 0 5px;
+  }
+
+  .button-signup{
+    background-color: #1D9BF0;
+    padding: 10px;
+    color: white;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+    font-size: 18px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.button-signup:hover{
+    background-color: #1885ce;
+    transition: 0.25s;
+}
+
+.alt-div{
+    color: #545758;
+    width: 330px;
+    margin-bottom: 45px;
+}
+
+.alt-div>span{
+    color: #1D9BF0;
+    cursor: pointer;
+}
+
+.alt-div>span:hover{
+    text-decoration: underline;
+}
+
+.login-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+.login-button{
+    background-color: black;
+    padding: 10px;
+    color:#1885ce;
+    justify-content: center;
+    text-align: center;
+    width: 300px;
+    font-size: 18px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    border:1px solid #545758;
+}
+
+.login-button:hover{
+    background-color: rgba(19, 27, 41, 0.411);
+    transition: 0.25s;
 }
